[gd_scene load_steps=15 format=3 uid="uid://cvi8lhd68bq0p"]

[ext_resource type="Script" uid="uid://b17vqdw21k2s4" path="res://scripts/menu.gd" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://or8l7uk6vnqj" path="res://assets/ombre-gradient-backgroun.jpg" id="2_4ytvr"]
[ext_resource type="Texture2D" uid="uid://cgdihikwnspsi" path="res://icons/menu (3).png" id="2_mhnvy"]
[ext_resource type="FontFile" uid="uid://kkof7uuxaayk" path="res://fonts/PixelOperator-Bold.ttf" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://c2kh2qfbaof4v" path="res://icons/x.png" id="4_4ytvr"]
[ext_resource type="AudioStream" uid="uid://qdirw4f5xmai" path="res://audio/switch_005.ogg" id="6_13sgg"]
[ext_resource type="AudioStream" uid="uid://1exsgtm7mfav" path="res://audio/minimize_008.ogg" id="7_i6lef"]
[ext_resource type="AudioStream" uid="uid://biu1vo6el776v" path="res://audio/menu-music.wav" id="8_70i5f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g3eks"]
texture = ExtResource("2_4ytvr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3eks"]
bg_color = Color(0.204425, 0.00171398, 0.304824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
bg_color = Color(0.307942, 0.00290739, 0.450774, 1)

[sub_resource type="Theme" id="Theme_v86rl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_13sgg"]
texture = ExtResource("2_4ytvr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6lef"]
bg_color = Color(0.204425, 0.00171398, 0.304824, 1)

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_con2f")

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 2
visible = false
offset_left = 608.0
offset_top = 277.0
offset_right = 1439.0
offset_bottom = 791.0
theme_override_styles/panel = SubResource("StyleBoxTexture_g3eks")

[node name="ShowInstructions" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 278.0
offset_top = 116.0
offset_right = 585.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("3_4ytvr")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/normal = SubResource("StyleBoxFlat_v86rl")
text = "Instructions"

[node name="ContinueButton" type="Button" parent="PauseMenu"]
process_mode = 2
layout_mode = 0
offset_left = 277.0
offset_top = 308.0
offset_right = 584.0
offset_bottom = 414.0
theme_override_fonts/font = ExtResource("3_4ytvr")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/normal = SubResource("StyleBoxFlat_v86rl")
text = "Retour"

[node name="InstructionsScreen" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
offset_left = 608.0
offset_top = 277.0
offset_right = 1439.0
offset_bottom = 791.0
theme = SubResource("Theme_v86rl")
theme_override_styles/panel = SubResource("StyleBoxTexture_13sgg")

[node name="CloseButton" type="Button" parent="InstructionsScreen"]
process_mode = 2
layout_mode = 0
offset_left = 748.0
offset_top = 9.0
offset_right = 820.0
offset_bottom = 81.0
theme_override_styles/hover = SubResource("StyleBoxFlat_i6lef")
icon = ExtResource("4_4ytvr")

[node name="Instructions" type="Label" parent="InstructionsScreen"]
layout_mode = 0
offset_left = -1.0
offset_top = 36.0
offset_right = 805.0
offset_bottom = 475.0
theme_override_fonts/font = ExtResource("3_4ytvr")
text = "* Utilisez les flèches et A/D pour vous déplacer  

* Appuyez sur Espace et la flèche du haut pour sauter 
 
* Clicquer avec la souris droite pour attaquer  

* Évitez l'ennemi
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PauseButton" type="Button" parent="."]
offset_left = 1828.0
offset_top = 21.0
offset_right = 1900.0
offset_bottom = 93.0
toggle_mode = true
icon = ExtResource("2_mhnvy")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_13sgg")
volume_db = -8.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_i6lef")
volume_db = -8.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_70i5f")
volume_db = -5.441

[connection signal="pressed" from="PauseMenu/ShowInstructions" to="." method="_on_show_instructions_pressed"]
[connection signal="pressed" from="PauseMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="InstructionsScreen/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="PauseButton" to="." method="_on_pause_button_toggled"]
